:icons: font

= Gentics Mesh Changelog

== 0.9.8 (08.05.2017)

icon:plus[] UI: Microschemas can now be assigned to projects.

icon:plus[] UI: Descriptions can now be assigned to schemas & microschemas.

icon:plus[] Core: Various bugs for node migrations have been fixed.

icon:plus[] Core: The allow property for micronode schema fields will now correctly be handled.

icon:plus[] Core: Microschemas will now be assigned to projects during a schema update. This only applies for microschemas which are referenced by the schema (e.g.: via a micronode field).

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.19.

== 0.9.7 (28.04.2017)

icon:plus[] GraphQL: The nested `content` and `contents` fields have been removed. The properties of those fields have been merged with the `node` / `nodes` field.

icon:plus[] GraphQL: The field names for paged resultset meta data have been updated to better match up with the REST API fields.

icon:plus[] GraphQL: A language can now be specified when loading node reference fields using the `lang` argument.

icon:plus[] GraphQL: It is now possible to resolve links within loaded fields using the `linkType` field argument.

icon:plus[] Auth: Support for anonymous access has been added to mesh. Requests which do not provide a `mesh.token` will automatically try to use the `anonymous` user. This user is identified by `username` and the thus no anonymous access support is provided if the user can't be located.

icon:plus[] GraphQL: It is now possible to retrieve the path for a content using the `path` field. The `Node.languagePaths` has been removed in favour of this new field.
